--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,25 @@
     <string name="trace_button_title">Trace</string>
     <string name="save_button_title">Save</string>
     <string name="settings_button_title">Settings</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <string name="redraw_trace_title">Redraw trace</string>
+    <string name="redraw_trace_summary">Clear trace on scroll and scale</string>
+    <string name="show_all_circles_title">Show all circles</string>
+    <string name="show_all_circles_summary">Show hidden and static circles</string>
+    <string name="ups_title">Speed</string>
+    <string name="ups_summary">Updates per second (speed of circle motion)</string>
+    <string name="shape_title">Shape</string>
+    <string name="shape_summary">Shape to show instead of circle</string>
+    <string name="settings_display_title">Display</string>
+    <string name="settings_about_title">About</string>
+    <string name="description_summary">Android port for Dodeca</string>
+    <string name="version_title">Version</string>
+    <string name="version_summary">Dodeca 1.0</string>
+    <string name="copyright_title">Copyright</string>
+    <string name="copyright_summary">© Revolt Pimenov and Ivan Nikitin</string>
+    <string name="support_title">Feedback and support</string>
+    <string name="support_summary">support</string>
 </resources>
