--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="fps_title">FPS</string>
     <string name="fps_summary">Frames per second, redraw speed</string>
     <string name="reverse_motion">Reverse motion</string>
+    <string name="clear_button_title">Clear</string>
 </resources>
