--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- add translation here -->
+    <string name="load_button_title">Загрузить</string>
+    <string name="go_button_title">Запустить/приостановить</string>
+    <string name="trace_button_title">Включить/выключить след</string>
+    <string name="save_button_title">Сохранить файл</string>
+    <string name="settings_button_title">Настройки</string>
+    <string name="title_activity_settings">Настройки</string>
+    <string name="redraw_trace_title">Перерисовка следа</string>
+    <string name="redraw_trace_summary">Убирать след при перемещении и масштабировании</string>
+    <string name="show_all_circles_title">Показать все окружности</string>
+    <string name="show_all_circles_summary">Показать скрытые и неподвижные окружности</string>
+    <string name="ups_title">Скорость</string>
+    <string name="ups_summary">Число пересчётов окружностей в секунду (скорость движения окружностей)</string>
+    <string name="shape_title">Форма</string>
+    <string name="shape_summary">Показывать _ вместо окружности</string>
+    <string name="settings_display_title">Внешний вид</string>
+    <string name="settings_about_title">Информация</string>
+    <string name="description_summary">Порт Dodeca для Android</string>
+    <string name="version_title">Версия</string>
+    <string name="copyright_summary">© Револьт Пименов и Иван Никитин</string>
+    <string name="support_title">Обратная связь и поддержка</string>
+    <string name="fps_summary">Число перерисовок в секунду, скорость перерисовки</string>
+    <string name="reverse_motion">Обратить движение</string>
+    <string name="clear_button_title">Очистить</string>
+    <string name="one_step_button_title">Один шаг</string>
+    <string name="change_color_button_title">Поменять цвет</string>
+    <string name="please_pick_color_toast">Двойное нажатие, чтобы выбрать цвет</string>
+    <string name="bad_ddu_format_toast">Неправильный формат ddu</string>
+    <string name="error_ddu_save_no_file_toast">Ошибка во время сохранения ddu: ddu не привязано к файлу</string>
+    <string name="error_ddu_save_toast">Ошибка во время сохранения ddu: см. лог</string>
+    <string name="ddu_saved_toast">Сохранение ddu в</string>
+    <string name="restore_defaults_title">Восстановить настройки по умолчанию</string>
+    <string name="autocenter_title">Автоцентровка</string>
+    <string name="restore_default_ddus_title">Восстановить исходные файлы ddu</string>
 </resources>
