--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="show_all_circles_title">Show all circles</string>
     <string name="show_all_circles_summary">Show hidden and static circles</string>
     <string name="ups_title">Speed</string>
-    <string name="ups_summary">Updates per second (speed of circle motion)</string>
+    <string name="ups_summary">Updates per second (speed of circle motion) (%s)</string> <!-- tmp -->
     <string name="shape_title">Shape</string>
     <string name="shape_summary">Shape to show instead of circle</string>
     <string name="settings_display_title">Display</string>
