--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,45 +3,48 @@
 
     <!-- Strings related to bottom bar -->
     <string name="load_button_title">Load ddu</string>
-    <string name="go_button_title">Play/pause</string>
-    <string name="trace_button_title">Toggle trace</string>
     <string name="save_button_title">Save ddu</string>
+    <string name="go_button_title">Play/pause</string>
+    <string name="one_step_button_title">Stepwise: one step</string>
+    <string name="trace_button_title">Toggle trace</string>
+    <string name="clear_button_title">Clear</string>
     <string name="settings_button_title">Settings</string>
+    <!-- unused -->
+    <string name="change_color_button_title">Change color</string>
 
     <!-- Toasts -->
     <string name="please_pick_color_toast">Double tap to pick color</string>
     <string name="bad_ddu_format_toast">"bad ddu format: "</string>
     <string name="error_ddu_save_no_file_toast">Error while saving ddu: ddu has no file</string>
     <string name="error_ddu_save_toast">Error while saving ddu, see log</string>
-    <string name="ddu_saved_toast">Saving ddu at</string>
-
-    <string name="title_activity_settings">Settings</string>
+    <string name="ddu_saved_toast">ddu saved at</string>
 
     <!-- Strings related to settings -->
+    <string name="settings_display_title">Display</string>
     <string name="redraw_trace_title">Redraw trace</string>
     <string name="redraw_trace_summary">Clear trace on scroll and scale</string>
     <string name="show_all_circles_title">Show all circles</string>
     <string name="show_all_circles_summary">Show hidden and static circles</string>
+    <string name="reverse_motion">Reverse motion</string>
+    <string name="autocenter_title">Autocenter</string>
+    <!-- v ups and fps are unused now -->
     <string name="ups_title">Speed</string>
     <string name="ups_summary">%s updates per second (speed of circle motion)</string>
+    <string name="fps_title" translatable="false">FPS</string>
+    <string name="fps_summary">Frames per second, redraw speed</string>
+    <!-- ^ -->
     <string name="shape_title">Shape</string>
     <string name="shape_summary">Show \'%s\' instead of circle</string>
-    <string name="settings_display_title">Display</string>
+    <string name="restore_default_ddu_title">Restore default current ddu</string>
+    <string name="restore_default_ddus_title">Restore default ddu-s</string>
+    <string name="restore_defaults_title">Restore default settings</string>
+
     <string name="settings_about_title">About</string>
     <string name="description_summary">Android port for Dodeca</string>
     <string name="version_title">Version</string>
     <string name="version_summary" translatable="false">Dodeca 1.0</string>
     <string name="copyright_title" translatable="false">Copyright</string>
-    <string name="copyright_summary">© Revolt Pimenov and Ivan Nikitin</string>
+    <string name="copyright_summary">© Revolt Pimenov (algorithms, esthetic geometry) and Ivan Nikitin (programming)</string>
     <string name="support_title">Feedback and support</string>
-    <string name="fps_title" translatable="false">FPS</string>
-    <string name="fps_summary">Frames per second, redraw speed</string>
-    <string name="reverse_motion">Reverse motion</string>
-    <string name="clear_button_title">Clear</string>
-    <string name="one_step_button_title">Stepwise: one step</string>
-    <string name="change_color_button_title">Change color</string>
-    <string name="restore_defaults_title">Restore default settings</string>
-    <string name="autocenter_title">Autocenter</string>
-    <string name="restore_default_ddus_title">Restore default ddu-s</string>
     <string name="feedback_subject" translatable="false">Dodeca support</string>
 </resources>
