--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,13 +46,14 @@
     <string name="version_title">Version</string>
     <string name="version_summary" translatable="false">Dodeca 1.0</string>
     <string name="copyright_title" translatable="false">Copyright</string>
-    <string name="copyright_summary">© Revolt Pimenov (algorithms, esthetic geometry) and Ivan Nikitin (programming)</string>
+    <string name="copyright_summary">© Revolt Pimenov (algorithms, esthetic geometry) and
+        Ivan Nikitin (programming)</string>
     <string name="support_title">Feedback and support</string>
     <string name="feedback_subject" translatable="false">Dodeca support</string>
-    <string name="developer_email">pierbezuhoff2016@gmail.com</string>
+    <string name="developer_email" translatable="false">pierbezuhoff2016@gmail.com</string>
+    <!-- Strings related to permissions -->
     <string name="permission_storage_message">Please, allow storage access to import this ddu</string>
-    <string name="permission_storage_accusation">You denied storage access permission. Why? you cannot import ddu now!
-    </string>
+    <string name="permission_storage_accusation">You denied storage access permission. Why? you cannot import ddu now!</string>
     <string name="permission_rationale_dialog_title">Permission request</string>
     <string name="permission_rationale_dialog_allow">Allow</string>
     <string name="permission_rationale_dialog_deny">Deny</string>
