--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <string name="permission_rationale_dialog_allow">Allow</string>
     <string name="permission_rationale_dialog_deny">Deny</string>
     <string name="show_stat_title">Show statistics</string>
+    <string name="n_updates_text">%d updates</string>
+    <string name="time_20_updates_text">20 updates per %.2f seconds</string>
 </resources>
