--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="show_all_circles_title">Show all circles</string>
     <string name="show_all_circles_summary">Show hidden and static circles</string>
     <string name="show_centers_title">Show circle centers</string>
+    <string name="rotate_shapes_title">Rotate shapes</string>
+    <string name="rotate_shapes_summary">Rotate square, cross, bars when updating</string>
     <string name="show_stat_title">Show statistics</string>
     <string name="n_updates_text">%d updates</string>
     <string name="time_20_updates_text">20 updates per %.2f seconds</string>
