--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -50,5 +50,5 @@
     <string name="time_20_updates_text">20 пересчётов за %.2f секунд</string>
     <string name="show_centers_title">Показывать центры окружностей</string>
     <string name="rotate_shapes_title">Поворачивать при инверсии</string>
-    <string name="rotate_shapes_summary">Поворачивать квадрат, крест, черту при инверсии</string>
+    <string name="rotate_shapes_summary">Поворачивать к̶в̶а̶д̶р̶а̶т̶, крест, черту при инверсии</string>
 </resources>
