--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -58,4 +58,5 @@
     <string name="help_title">Справка</string>
     <string name="canvas_factor_summary">Холст превосходит видимый экран в %s раз</string>
     <string name="canvas_factor_title">Размер холста</string>
+    <string name="speed_title">Скорость</string>
 </resources>
