--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,7 +16,7 @@
     <string name="shape_summary">Показывать %s вместо окружности</string>
     <string name="settings_display_title">Внешний вид</string>
     <string name="settings_about_title">Информация</string>
-    <string name="description_summary">Порт Dodeca для Android</string>
+    <string name="description_summary">Порт Dodeca Look для Android</string>
     <string name="version_title">Версия</string>
     <string name="copyright_summary">© Револьт Пименов (алгоритмы, эстетическая геометрия),
         Иван Никитин (программирование)
